modules/wycs/tests/invalid/test_058.wyal
assert:
  forall ({int} xs):
    if:
       |xs| == 0
    then:
      exists(int x):
         x in xs